changed the way form are hidden by changing the script.js file, also added type search, fixed the way activities are added to main

--- a/frontend/res/css/index.css
+++ b/frontend/res/css/index.css
@@ -275,6 +275,10 @@ nav .navbarSearch form input {
   display: none;
 }
 
+#searchNumber {
+  display: none;
+}
+
 /* 
 nav .container form button {}
 */
